--- a/templates/Pizza.html
+++ b/templates/Pizza.html
@@ -52,7 +52,7 @@
               The BBQ burger is a mouthwatering delight featuring a juicy beef patty grilled to perfection, topped with smoky barbecue sauce, melted cheese, crispy bacon, and caramelized onions. It's a tantalizing combination of flavors that will satisfy your cravings for a savory and indulgent burger experience. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
             <div class="d-flex justify-content-between align-items-center">
               
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Carbonara Pizza.jpg">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Carbonara_Pizza">
                   Order
                 </button>
                 <div class="d-inline p-2 bg-dark text-white">9 mins</div>
@@ -69,7 +69,7 @@
                   A cheeseburger is a classic American delicacy consisting of a juicy beef patty topped with melted cheese, sandwiched between soft buns, offering a perfect blend of savory flavors and indulgent satisfaction. It is a mouthwatering culinary creation that has become an enduring symbol of comfort food worldwide. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
               <div class="d-flex justify-content-between align-items-center">
                 
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza 4 cheese, peperoni, tomatoes.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_4_cheese_peperoni_tomatoes">
                     Order
                   </button>
                 
@@ -89,7 +89,7 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza double cheese, ham, bacon, red paprika and corn.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_double_cheese_ham_bacon_red_paprika_and_corn">
                     Order
                   </button>
                 
@@ -110,7 +110,7 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza Funghi.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_Funghi">
                     Order
                   </button>
                 
@@ -130,7 +130,7 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza Pineapple and salami.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_Pineapple_and_salami">
                     Order
                   </button>
                   <div class="d-inline p-2 bg-dark text-white">9 mins</div>
@@ -148,7 +148,7 @@
                   A chicken burger is a flavorful alternative to its beef counterpart, featuring a tender and juicy chicken patty seasoned to perfection. Served between soft buns with an array of toppings, it offers a lighter yet satisfying option that caters to both poultry lovers and those seeking a delicious twist on the classic burger experience.&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza Salami, double cheese and mushrooms.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_Salami_double_cheese_and_mushrooms">
                     Order
                   </button>
                 </div>
@@ -187,7 +187,7 @@
                   A beef burger is a juicy and flavorful delight, made from a perfectly seasoned beef patty cooked to perfection. Sandwiched between soft buns and customizable with an array of toppings, it offers a satisfying and hearty dining experience that celebrates the rich taste of high-quality beef.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="Pizza with brooccoli salami corn shrooms and tomatoes.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_with_brooccoli_salami_corn_shrooms_and_tomatoes">
                     Order
                   </button>
                 </div>
@@ -206,7 +206,7 @@
                   The beef bacon burger is an irresistible fusion of savory flavors, combining a juicy beef patty with crispy bacon made from flavorful beef. With each bite, you'll savor the perfect balance of meaty goodness and smoky undertones, creating a mouthwatering burger experience that is sure to delight any bacon lover.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza Salami.jpg">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Pizza_Salami">
                     Order
                   </button>
                 </div>
@@ -242,7 +242,7 @@
 </div>
 </div>
 <!--Model_Do_BBQ_Burger-->
-<div class="modal fade" id="Carbonara Pizza.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Carbonara_Pizza" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -260,7 +260,7 @@
 </div>
 </div>
 <!--Model_Do_Beef_Burger-->
-<div class="modal fade" id="Pizza 4 cheese, peperoni, tomatoes.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_4_cheese_peperoni_tomatoes" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -278,7 +278,7 @@
 </div>
 </div>
 <!--Model_Do_BBQ_Zestaw-->
-<div class="modal fade" id="Pizza double cheese, ham, bacon, red paprika and corn.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_double_cheese_ham_bacon_red_paprika_and_corn" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -296,7 +296,7 @@
 </div>
 </div>
 <!--Model_Do_Hawaiian-->
-<div class="modal fade" id="Pizza Funghi.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_Funghi" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -314,7 +314,7 @@
 </div>
 </div>
 <!--Model_Do_Chicken-->
-<div class="modal fade" id="Pizza Pineapple and salami.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_Pineapple_and_salami" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -332,7 +332,7 @@
 </div>
 </div>
 <!--Model_Do_Beef_Zestaw-->
-<div class="modal fade" id="Pizza Salami, double cheese and mushrooms.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_Salami_double_cheese_and_mushrooms" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -350,7 +350,7 @@
 </div>
 </div>
 <!--Model_Do_Beef_Bacon_Burger-->
-<div class="modal fade" id="Pizza with brooccoli salami corn shrooms and tomatoes.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_with_brooccoli_salami_corn_shrooms_and_tomatoes" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -368,7 +368,7 @@
 </div>
 </div>
 <!--Model_Do_Salami-->
-<div class="modal fade" id="Pizza Salami.jpg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Pizza_Salami" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
     <div class="modal-content">
     <div class="modal-header">
