--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
 <div class="d-flex justify-content-center bg-body-tertiary">
   <ul class="nav nav-pills">
     <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Burger</a></li>
-    <li class="nav-item"><a href="/cart" class="nav-link">Pizza</a></li>
-    <li class="nav-item"><a href="/map" class="nav-link">Dodatki</a></li> 
+    <li class="nav-item"><a href="/pizza" class="nav-link">Pizza</a></li>
+    <li class="nav-item"><a href="/tradcyjna" class="nav-link">Dodatki</a></li> 
   </ul>
 </div>
 <!--Wybierajka-->
