--- a/templates/Pizza.html
+++ b/templates/Pizza.html
@@ -36,8 +36,8 @@
 <div class="d-flex justify-content-center bg-body-tertiary">
   <ul class="nav nav-pills">
     <li class="nav-item"><a href="/" class="nav-link">Burger</a></li>
-    <li class="nav-item"><a href="templates/Pizza" class="nav-link active" aria-current="page">Pizza</a></li>
-    <li class="nav-item"><a href="templates/Tradycyjne" class="nav-link">Tradycyjne</a></li> 
+    <li class="nav-item"><a href="/Pizza" class="nav-link active" aria-current="page">Pizza</a></li>
+    <li class="nav-item"><a href="/Tradycyjne" class="nav-link">Tradycyjne</a></li> 
   </ul>
 </div>
 <!--Wybierajka-->
@@ -459,6 +459,5 @@ Experience the culinary delights at our restaurant, where every dish is a sympho
       </div>
   </footer>
 </div>
-<script type="text/javascript" src="{%static 'js/cart.js' %}"></script>
 </body>
 </html>
