--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <div class="d-flex justify-content-end">
   <ul class="nav nav-pills">
             <li class="nav-item"><a href="/map" class="nav-link"><img src="{{ url_for('static',filename='Map.jpg') }}" width="30" height="30" alt=""></a></li> 
-            <li class="nav-item"><a href="/login" class="nav-link"><img src="{{ url_for('static',filename='Login.jpg') }}" width="30" height="30" alt=""></a></li>
+            <li class="nav-item"><a href="/login-form" class="nav-link"><img src="{{ url_for('static',filename='Login.jpg') }}" width="30" height="30" alt=""></a></li>
             <li class="nav-item"><a href="/cart" class="nav-link"><img src="{{ url_for('static',filename='CartICON.jpg') }}" width="40" height="35" alt=""></a></li>
   </ul> 
         
