--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
                 <button type="submit" class="btn btn-primary btn-block d-flex p-2">
                   Sign up
                 </button>
-                  <p>If you don't have account register <a href="/register">Create</a></p>
+                  <p>If you don't have account register <a href="/register-form">Create</a></p>
                 </div>
               </form>
             </div>
